--- a/src/app/components/city-weather-info/city-weather-info.component.scss
+++ b/src/app/components/city-weather-info/city-weather-info.component.scss
@@ -1,11 +1,7 @@
-.weather-app-container {
-  max-width: 500px;
+.city-weather-info {
   margin: 30px auto;
   overflow: auto;
-  min-height: 300px;
   padding: 30px;
   border-radius: 5px;
   box-shadow: rgba(0, 0, 0, 0.24) 0px 0px 8px;
-  color: #42428f;
-  font-family: monospace;
 }
