--- a/src/app/components/city-weather-info/city-weather-info.component.html
+++ b/src/app/components/city-weather-info/city-weather-info.component.html
@@ -1,6 +1,3 @@
-<form class="city-weather-info">
-  <h1>Weather in London</h1>
-  <h2>Temp is 0000</h2>
-  <h2>Chance of rain</h2>
-  <a href="http://">See full forecast</a>
-</form>
+<div>
+  <router-outlet></router-outlet>
+</div>
