--- a/src/app/components/search/search.component.scss
+++ b/src/app/components/search/search.component.scss
@@ -11,7 +11,7 @@
   }
   .search-button {
     background-color: #5c56b3;
-    color: #fff;
+    color: white;
     border: none;
     padding: 10px 20px;
     margin: 5px 0px 5px 5px;
@@ -19,6 +19,5 @@
     cursor: pointer;
     text-decoration: none;
     font-size: 17px;
-    font-family: monospace;
   }
 }
