--- a/src/app/components/details-page/details-page.component.html
+++ b/src/app/components/details-page/details-page.component.html
@@ -1,1 +1,9 @@
-<p>New stuff</p>
+<div>
+  <h1>Details Page</h1>
+  <h2>Fetch 5 day forecast for {{ city }}</h2>
+  <h2>Display tiles/cards with short forecast information for every day</h2>
+
+  <a routerLink="/today" routerLinkActive="active" class="router-button">
+    Back
+  </a>
+</div>
